--- a/WineMate/home/templates/home/home.html
+++ b/WineMate/home/templates/home/home.html
@@ -15,24 +15,14 @@
 
 </div>
 
-
-<div class="px-3">
-    <p style="font-size:20px"> Голям проблем във винпром „Домейн Бояр“ е лошата система за записване, запазване и променяне на данните за
-        винопроизвидство, идващи от лабораторията. На този етап се използват excel таблици, качени на сървър, до който
-        се
-        достига чрез VPN. Недостатъкът е, че хората, които работят с таблиците, въвеждат определени данни по различен
-        начин,
-        понякога дори на различно място, което не позволява сортиране или филтриране по даден показател за период от
-        време и
-        прави работата с таблиците бавна и мъчителна.</p>
-    <p style="font-size:20px">Друг проблем е липсата на някои функционалности, които биха направили работата по-ефективна, лесна и контролирана
-        от
-        началника на отдела. Пример за това е историята с промените на данни, която в момента се поддържа писмено и на
-        ръка,
-        което води до много излишни усилия.</p>
-    <p style="font-size:20px">Системата предлага автоматизация на голяма част от процесите, като по този начин намаля времето изгубено в
-        странични
-        задачи максимално.</p>
+<h5 class="display-4 text-center">Добре дошли в WineMate!</h5>
+<h2 class="px-3" >Инструкции:</h2>
+<div class="px-5">
+    <p style="font-size:20px"> </p>
+    <p style="font-size:20px">Ако искате да отворите дадена таблица натиснете върху името ѝ.</p>
+    <p style="font-size:20px">Във всяка страница има таблица в горната част на екрана и място за попълване на данни в долната.</p>
+    <p style="font-size:20px">Системата е направена по възможно най-лесен за употреба начин, така че не би трябвало да срещнете проблеми
+    с четенето и редактирането на данни.</p>
 </div>
 
 
